--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Resident Portal</title>
+    <title>Apartment Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
@@ -27,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Resident Portal</a>
+          <a class="navbar-brand" href="#">Apartment Portal</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -53,9 +53,9 @@
         <div class="col-md-2">
         <h3>Office Info</h3>
         <address>
-          <strong>Twitter, Inc.</strong><br>
+          <strong>Apartment, Inc.</strong><br>
           123 S. Main St.<br>
-          San Francisco, CA 94107<br>
+          Indianapolis, IN 48392<br>
           <abbr title="Phone">P:</abbr> (123) 456-7890<br>
           <abbr title="Email">E:</abbr> <a href="mailto:#">help@apartment.com</a>
         </address>
